--- a/README
+++ b/README
@@ -28,13 +28,13 @@ Code structure:
 
 Notes:
 1. For each API call, we get details and throughputs for all caches.
-    - Details are used to build a mapping of clusters to caches in each cluster.
+    - We use the details to build a mapping of clusters to caches in each cluster.
       Since this may not change often, we could build the mapping once and reuse
       it, refreshing at intervals.
-    - We get throughputs for all caches even when finding outliers for a given
+    - We get throughputs for all caches even when finding outliers in a given
       cluster. The cost of processing extra data - given the current data set -
-      seems smaller than the cost of making separate requests for each cache's
-      throughput.
+      is smaller than the cost of making a separate request for the throughput
+      of each cache, especially for clusters with many caches.
     - Both these issues could be fixed by having a cluster-level API: one call
       to get details for all caches in a cluster, one call to get the throughputs.
       This would be increasingly useful as more caches are added.
@@ -44,8 +44,8 @@ Notes:
 3. To find outliers, we calculate the average throughput of a cluster, then
    compare the throughput of each cache in the cluster to the average.
     - For more complex metrics, we could try to parallelize the computation,
-      either with multiple threads or by distributing it across machines.
-4. To persist a given threshold for future requests, we could introduce a
+      either with multithreading or by distributing it across machines.
+4. To persist a given threshold for future calls, we could introduce a
    configuration API, e.g.:
         /v1/clusters/caches/outliers/configuration/
         /v1/clusters/<cluster>/caches/outliers/configuration/
